Improved API docummentation
