# API/Router/filterroute_transaction.mjs
@@ -3,8 +3,8 @@ import { TransactionFilter } from '../controller/Filtercontroller.mjs';
 const router = Router();
 
 router.
-     route('/')
-     .post(function(req,res){
+     route('/:filtertype/:category')
+     .get(function(req,res){
         TransactionFilter.TransactionFilter(req,res)
      })
 export default router
