# API/Util/filtercontroller_aircraft.mjs
@@ -1,13 +1,13 @@
 const AircraftFilterHandler = async (category,model,req,res) =>{
     if(category==="Airline")
     {
-        const result = await model.find({airline:req.query.airline})
+        const result = await model.find({airline:req.params.filtertype})
         res.status(200).send(result)
     }
 }
 export const AircraftFilter = model =>async (req,res)=>{
     try{
-        const category=req.query.category
+        const category=req.params.category
         AircraftFilterHandler(category,model,req,res)
     }
     catch(e)
